--- a/.github/workflows/ldap-update-user-roles.yml
+++ b/.github/workflows/ldap-update-user-roles.yml
@@ -114,7 +114,7 @@ jobs:
                     $.executionRoleArn: "arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{ github.event.inputs.environment }}-ldap-ecs-task-exec"
                     $.taskRoleArn: "arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{ github.event.inputs.environment }}-ldap-ecs-task"
 
-                    $.containerDefinitions[0].image: "ghcr.io/ministryofjustice/hmpps-ldap-automation:dave-test"
+                    $.containerDefinitions[0].image: "ghcr.io/ministryofjustice/hmpps-ldap-automation:TM-1357-fix-db-connection-16072060668-37"
 
                     $.containerDefinitions[0].containerName: "ldap-automation-task-${{ github.run_id }}"
 
