--- a/.github/workflows/oracle-db-licence-audit.yml
+++ b/.github/workflows/oracle-db-licence-audit.yml
@@ -13,8 +13,8 @@ on:
         default: "main"
 
 env:
-  ansible_config: operations/playbooks/ansible.cfg
-  command: ansible-playbook operations/playbooks/oracle_licence_audit/audit.yml
+  ansible_config: ansible/playbooks/ansible.cfg
+  command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-db-licence-audit
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image and OIDC token
@@ -39,6 +39,16 @@ jobs:
     continue-on-error: true
 
     steps:
+      - name: Checkout From hmpps-delius-operational-automation
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/hmpps-delius-operational-automation
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/ansible.cfg
+          path: ansible
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -52,16 +62,19 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
-      - name: Checkout From hmpps-delius-operational-automation
+      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
         uses: actions/checkout@v4
         with:
-          repository: ministryofjustice/hmpps-delius-operational-automation
+          repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
-              playbooks/oracle_licence_audit
-              playbooks/ansible.cfg
+            ansible/roles/oracle-licence-audit
+            ansible/roles/get-ec2-facts
+            ansible/roles/get-modernisation-platform-facts
+            ansible/roles/epel
+            ansible/site.yml
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
       - name: Get Database Targets For Environment
@@ -104,7 +117,7 @@ jobs:
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e targets=${{ steps.databasetargets.outputs.targets }} \
           -e environment_name=${{ matrix.environment }} \
-          -e audit=yes
+          --tags collection
 
       - name: Start Ansible Oracle Licence Audit Upload When Last Environment Processed
         if: ${{ steps.databasetargets.outputs.lastjob != '' }}
@@ -112,4 +125,4 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e targets=${{ steps.databasetargets.outputs.targets }} \
-          -e upload=yes
+          --tags summary
