Changes to make tasks idempotent

--- a/playbooks/delius_objects/playbook.yml
+++ b/playbooks/delius_objects/playbook.yml
@@ -145,3 +145,5 @@
 
         COMMIT;
       EOF
+  register: non_production_urls
+  changed_when: non_production_urls.stdout is search('1 row updated.')
