Improvements to idempotency reporting

--- a/playbooks/delius_users/playbook.yml
+++ b/playbooks/delius_users/playbook.yml
@@ -288,43 +288,19 @@
 # The custom sql files MUST reside in the files directory with file format of grant_<database user name>_user.sql
 # where the <database user name> is the key defined in the delius_users dictionary
 
+# Note that Ansible does the file lookup before it evaluates the when condition, so default non-existent files to be empty,
+# otherwise it will complain that the file does not exist.
 - name: Grant privileges to Delius read write users
-  block:
-    - name: Copy required sql files for grant privileges for Delius read write users
-      copy:
-        src: "grant_{{ item.key }}_user.sql"
-        dest: "/tmp"
-      with_dict: "{{ delius_users }}"
-      when: (item.key[-3:]=="_rw")
-
-    - name: Execute the grant sql files on the target
-      shell:
-        cmd: |
-          . ~/.bash_profile;
-            sqlplus -s / as sysdba << EOF
-            spool /tmp/grant_{{ item.key }}_user.lst
-            @/tmp/grant_{{ item.key }}_user.sql
-            spool off
-          EOF
-      with_dict: "{{ delius_users }}"
-      when: (item.key[-3:]=="_rw")
-
-    - name: Gather any errors of the execution by checking spool files
-      shell: grep "^GRANT.*$" /tmp/grant_{{ item.key }}_user.lst | cat
-      with_dict: "{{ delius_users }}"
-      when: (item.key[-3:]=="_rw")
-      changed_when: false
-      register: output
-
-    - name: Output any errors during granting privileges
-      debug:
-        msg: "{{ item.stdout_lines }}"
-      with_items: "{{ output.results }}"
-      loop_control:
-        label: "Reporting any failed grants for {{ item.item.key }}..."
-      when: (item.item.key[-3:]=="_rw") and (item.stdout_lines | length > 0)
-
-  when: (delius_users is defined) and ( action_type=="create" or action_type == "all")
+  script: grant_rw_privileges.sh
+  environment:
+     GRANTS: "{{ lookup('file', 'grant_{{ item }}_user.sql',errors='ignore') | default('', true) }}"
+  loop: "{{ delius_users.keys() }}"
+  when:
+     - item[-3:]=="_rw"
+     - delius_users is defined
+     - action_type=="create" or action_type == "all"
+  register: grant_rw_privileges
+  changed_when: grant_rw_privileges.stdout is search('.*ADDING:.*')
 
 - name: Restore delius user passwords
   shell:
