--- a/.github/workflows/oracle-db-patching.yml
+++ b/.github/workflows/oracle-db-patching.yml
@@ -121,6 +121,7 @@ jobs:
             sparse-checkout-cone-mode: false
             sparse-checkout: |
                              playbooks/oracle_interim_patch
+                             playbooks/oracle_ha
                              ansible.cfg
             path: operations
             ref: ${{ github.event.inputs.SourceCodeVersion }}
@@ -137,6 +138,10 @@ jobs:
 
       - name: Start Oracle Patching
         run: |
+          # Link the HA Build Play to allow it be used as a role.
+          rm -f $PWD/operations/playbooks/oracle_release_update/hmpps-delius-oracledb-ha
+          ln -svf $PWD/operations/playbooks/oracle_ha/build-ha $PWD/operations/playbooks/oracle_release_update/hmpps-delius-oracledb-ha
+          # Now run the patching
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_hosts=${{needs.build_target_name.outputs.TargetHost}} \
           -e install_absent_patches=${{ github.event.inputs.InstallAbsentPatches }} \
