--- a/playbooks/oracle_interim_patch/oracle_interim_patch/tasks/restart-databases.yml
+++ b/playbooks/oracle_interim_patch/oracle_interim_patch/tasks/restart-databases.yml
@@ -47,6 +47,12 @@
 - debug:
       var: hostvars[primary_host]
 
+- debug:
+      var: hostvars[primary_host]['ansible_facts']
+
+- debug:
+      var: hostvars[primary_host]['ansible_facts']['fqdn']
+
 - name: Re-enable FSFO from Primary
   include_role:
     name: build-ha
