--- a/playbooks/oracle_ha/build-ha/tasks/main.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/main.yml
@@ -28,10 +28,17 @@
     password_rotation: true
   when: method is defined and method == "password rotation"
 
+- debug:
+      var: primary_host
 
 - debug:
       var: hostvars[primary_host]
 
+- debug:
+      var: hostvars[primary_host]['ansible_facts']
+
+- debug:
+      var: hostvars[primary_host]['ansible_facts']['fqdn']
 
 - name: (main/set-primary-config) Handle FQDN For Primary and Standby Host 1 TNS Purposes
   set_fact:
