--- a/playbooks/oracle_ha/build-ha/tasks/main.yml
+++ b/playbooks/oracle_ha/build-ha/tasks/main.yml
@@ -40,6 +40,21 @@
 - debug:
       var: hostvars[primary_host]['ansible_facts']['fqdn']
 
+- debug:
+      msg: "{{ primary_host + '.' + ansible_facts.domain }}"
+
+- debug:
+      var: standby1
+
+- debug:
+     var: hostvars[groups[ standby1 ][0]]
+
+- debug:
+       var:  hostvars[groups[ standby1 ][0]]['inventory_hostname']
+
+- debug:
+       msg:  "{{ hostvars[groups[ standby1 ][0]]['inventory_hostname'] }}.{{ dns_zone_internal }}"
+
 - name: (main/set-primary-config) Handle FQDN For Primary and Standby Host 1 TNS Purposes
   set_fact:
     primary_host_tns: "{{ hostvars[primary_host]['ansible_facts']['fqdn'] | default(primary_host + '.' + ansible_facts.domain) }}"
