--- a/playbooks/oracle_interim_patch/oracle_interim_patch/tasks/restart-databases.yml
+++ b/playbooks/oracle_interim_patch/oracle_interim_patch/tasks/restart-databases.yml
@@ -16,16 +16,21 @@
   set_fact:
     primary_host: "{{ groups[primary_host_group][0] }}"
 
-# Re-Enable FSFO from Associated Primary
-# (Only run from Primary for each Database Type to avoid competing startups)
-- name: Re-enable FSFO
+# FQDN required for Build HA role
+- name: Gather only fqdn
+  ansible.builtin.setup:
+    gather_subset:
+      - network
+
+- name: Re-enable FSFO from Primary
   include_role:
     name: build-ha
-    tasks_from: enable-fsfo.yml
   vars:
-    delegation_host: "{{ primary_host }}"
-    primary_hostname: "{{ primary_host }}"
-    fsfo_mode: "{{ hostvars[primary_host]['fsfo_mode'] | default('disabled') }}"
+    force_restore: true
+    password_rotation: false
+    method: "fsfo setup"
+    primary: "{{ primary_host_group }}"
+    standby_number: 0
   when:
     - high_availability_count[application] | int > 0
     - hostvars[primary_host]['fsfo_mode'] | default('disabled') | lower in ['enabled','observe','observer']
