--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -3,6 +3,8 @@ run-name: "Oracle: ${{ github.event.inputs.TargetEnvironment }}-restore-points"
 on:
   workflow_dispatch:
     inputs:
+      # Note that we use, for example, "dev" here instead of "delius-core-dev"
+      # since we need to include both Delius & MIS environments in the same rollback.
       TargetEnvironment:
         description: "Target environment"
         required: true
