--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -385,37 +385,10 @@
               debug:
                 msg: "Restarting Audit Replication from SCN {{ get_db_startup_scn.stdout | trim }}"
 
-            - name: Get Maximum Archived Redo Log Sequence Generated So Far
-              script: get_max_seq.sh
-              register: get_max_seq
-              changed_when: false
-
-            # Ensure all archive logs created so far are backed up so we can restore them
-            # onto the standby host if they are not already present.
-            - name: Backup Archivelogs
-              import_playbook: ../oracle_backup/backup.yml
-              vars:
-                rman_target: "{{ target_dbs | replace('dbs','primarydb') }}"
-                json_inputs: {}
-                daily_weekly: archivelog
-                min_seq: 1
-                max_seq: "{{ get_max_seq.stdout | trim }}"
-                run_in_foreground: true
-
-            # Include role inside a block so that it may be delegated
-            - name: Restart Audited Interaction Replication
-              when:
-                - target_dbs | regex_search('delius_dbs')
-                - database_primary_sid is defined
-              delegate_to: localhost
-              become: no
-              block:
-                - include_role:
-                    name: oracle_audit_replication_management
-                  vars:
-                    replication_action: restart
-                    audit_cdc_scn: "{{ get_db_startup_scn.stdout | trim }}"
-                    max_seqno: "{{ get_max_seq.stdout | trim }}"
+- name: Restart Audit Replication
+  import_playbook: ../oracle_audit_replication_management/playbook.yml
+  target_hosts:  "{{ target_dbs | replace('dbs','primarydb') }}"
+  replication_action: restart
 
 # If this an AWS Environment then we will run password rotation - check if this is the case
 - name: Set Inside AWS for Password Rotation
