--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -189,6 +189,7 @@ jobs:
             playbooks/oracle_password_rotation
             playbooks/oracle_audit_replication_management
             playbooks/oracle_backup
+            playbooks/oracle_ha
             playbooks/ansible.cfg
             common/*
           path: operations
@@ -242,6 +243,7 @@ jobs:
           ln -s $PWD/operations/playbooks/oracle_audit_replication_management/oracle_audit_replication_management $PWD/roles/ansible/roles/oracle_audit_replication_management
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_restore_points/roles
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
+          ln -s $PWD/roles/ansible/roles/playbooks $PWD/operations/playbooks/oracle_interim_patch/build-ha
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_dbs=${{ steps.definetargets.outputs.delius_target }} \
           -e "required_action='${{ github.event.inputs.RequiredAction }}'" \
