--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -385,11 +385,12 @@
               debug:
                 msg: "Restarting Audit Replication from SCN {{ get_db_startup_scn.stdout | trim }}"
 
-- name: Restart Audit Replication
+- name: Restart Audit Replication in Delius
   import_playbook: ../oracle_audit_replication_management/playbook.yml
   vars:
       target_hosts:  "{{ target_dbs | replace('dbs','primarydb') }}"
       replication_action: restart
+  when: arget_dbs | regex_search('delius_dbs')
 
 # If this an AWS Environment then we will run password rotation - check if this is the case
 - name: Set Inside AWS for Password Rotation
