--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -422,6 +422,14 @@
       debug:
         var: required_action
 
+    - name: environment_name
+        debug:
+          var: required_action
+
+    - name: database_type
+        debug:
+          var: database_type
+
 # If we have run a flashback then it is possible that password changes have been reverted and will be
 # out of Sync with those in Secrets Manager and OEM.  Rotate the passwords again to sync everything up.
 # (This step is skipped if not in AWS since there will be no password store)
