--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
@@ -17,6 +17,20 @@
   set_fact:
     secret_password_dict: "{{ secret_password_dict |  combine({ 'account': { 'users': [{db_username: new_password | default(None) }] }}, recursive=true) }}"
 
+- name: Whoami
+  shell: aws sts get-caller-identity
+  register: get_caller_identity
+
+- debug:
+     var: get_caller_identity
+
+- name: Environment
+  shell: env
+  register: get_my_env
+
+- debug:
+     var: get_my_env
+     
 - name: Update {{ db_username }} Password In Secrets
   import_role:
     name: secretsmanager-passwords
