Ignore views referencing non-existent services

--- a/playbooks/delius_users/playbook.yml
+++ b/playbooks/delius_users/playbook.yml
@@ -79,6 +79,8 @@
         -- links which do not exist.  Handle this case of exceptions by ignoring them.
         table_does_not_exist exception;
         pragma               exception_init(table_does_not_exist,-942);
+        service_does_not_exist exception;
+        pragma               exception_init(service_does_not_exist,-12514);
 
       begin
 
@@ -100,7 +102,7 @@
           begin
               EXECUTE IMMEDIATE l_command;
           exception
-              when table_does_not_exist
+              when table_does_not_exist or service_does_not_exist
               then 
                 null; -- Ignore missing remote tables using database links
           end;
