--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
@@ -2,11 +2,19 @@
   set_fact:
     secretsmanager_passwords_dict: {}
 
+
+- name: DD Secret Name
+  debug:
+
 - name: Setup Temporary Secrets Dictionary
   set_fact:
     secret_password_dict:
       account:
         secret: "{{ secret_name }}"
+
+- name: DD Secrets Dictionary
+  debug:
+     var: secret_password_dict
 
 # - name: Add Secret Account Name and Role Name To Secret Dictionary For OEM databases
 #   set_fact:
@@ -16,6 +24,10 @@
 - name: Add User {{ db_username }} To Secret Dictionary
   set_fact:
     secret_password_dict: "{{ secret_password_dict |  combine({ 'account': { 'users': [{db_username: new_password | default(None) }] }}, recursive=true) }}"
+
+- name: DD Secrets Dictionary
+  debug:
+     var: secret_password_dict
 
 - name: Whoami
   shell: aws sts get-caller-identity
