--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
@@ -26,7 +26,7 @@
   set_fact:
     secret_password_dict: "{{ secret_password_dict |  combine({ 'account': { 'users': [{db_username: new_password | default(None) }] }}, recursive=true) }}"
 
-- name: DD Secrets Dictionary
+- name: JJ Secrets Dictionary
   debug:
      var: secret_password_dict
 
