Hit 10 inputs limit

--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -68,19 +68,10 @@ on:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "main"
-      VerboseOutput:
-        description: "Verbose Output level"
-        type: choice
-        default: ""
-        options:
-          - ""
-          - "-vv"
-          - "-vvv"
-          - "-vvvv"
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
-  command: ansible-playbook operations/playbooks/oracle_restore_points/playbook.yml
+  command: ansible-playbook -vvv operations/playbooks/oracle_restore_points/playbook.yml
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image and OIDC token
@@ -258,8 +249,7 @@ jobs:
           -e target_dbs=${{ steps.definetargets.outputs.delius_target }} \
           -e "required_action='${{ github.event.inputs.RequiredAction }}'" \
           -e restore_point_name=${{ github.event.inputs.RestorePointName }} \
-          -e restore_date_time=${{ github.event.inputs.RestoreDateTime }} \
-          ${{ github.event.inputs.VerboseOutput }}
+          -e restore_date_time=${{ github.event.inputs.RestoreDateTime }}
           
   oracle-restore-points-mis:
     needs: validate-parameters
@@ -334,5 +324,4 @@ jobs:
           -e target_dbs=${{ needs.validate-parameters.outputs.MisTargets  }} \
           -e "required_action='${{ github.event.inputs.RequiredAction }}'" \
           -e restore_point_name=${{ github.event.inputs.RestorePointName }} \
-          -e restore_date_time=${{ github.event.inputs.RestoreDateTime }} \
-          ${{ github.event.inputs.VerboseOutput }}
+          -e restore_date_time=${{ github.event.inputs.RestoreDateTime }}
