Dynamically include Secrets Manager role

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
@@ -45,7 +45,7 @@
      var: get_my_env
      
 - name: Update {{ db_username }} Password In Secrets
-  import_role:
+  include_role:
     name: secretsmanager-passwords
   vars:
     secretsmanager_passwords: "{{ secret_password_dict }}"
