--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -71,7 +71,7 @@ on:
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
-  command: ansible-playbook -vvv operations/playbooks/oracle_restore_points/playbook.yml
+  command: ansible-playbook operations/playbooks/oracle_restore_points/playbook.yml
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image and OIDC token
