Miscellaneous Fixes for Interim Patching, Password Rotation and Restore Point Workflows (#645)
* Only set the Max Seqno where required

* Debug

* Add more debug

* Backup redo logs before restarting replication

* Use existing playbook

* Supply as variables

* Add Build HA as a Role

* Change symlink locations

* Audit Replication Management referenced in MIS even though not used

* Include reference to unused Audit replication role

* Oracle Backup is used

* Add Debug

* Do not attempt to restart audit replication in MIS where it does not exist

* Typo

* Only Restart Audit Replication After a Flashback

* Add debug

* Whitespace

* Add more debug

* whitespace

* Wrong Debug

* Set the target environment name

* Add more debug

* More Debug

* Missing line

* Add verbosity

* Hit 10 inputs limit

* Dynamically include Secrets Manager role

* Remove debug

* Remove verbosity

* Commit changes made by code formatters

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/playbooks/oracle_ha/disable-fsfo.yml
+++ b/playbooks/oracle_ha/disable-fsfo.yml
@@ -4,7 +4,9 @@
   become_user: oracle
   become_method: sudo
   tasks:
-    - name: Disable FSFO
-      include_role:
-        name: build-ha
-        tasks_from: disable-fsfo.yml
+    - name: Disable FSFO if Enabled
+      shell: |
+        . ~/.bash_profile
+        echo "show fast_start failover" | dgmgrl / | grep "Fast-Start Failover: Enabled" && echo "disable fast_start failover" | dgmgrl / || true
+      register: disable_fsfo
+      changed_when: disable_fsfo.stdout | default('') is search('.*Disabled.*')
