--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/record_secret_password.yml
@@ -8,17 +8,12 @@
       account:
         secret: "{{ secret_name }}"
 
-# - name: Add Secret Account Name and Role Name To Secret Dictionary For OEM databases
-#   set_fact:
-#     secret_password_dict: "{{ secret_password_dict |  combine({ 'account': { 'account_name':  'hmpps-oem-' + aws_environment, 'assume_role_name': 'EC2OracleEnterpriseManagementSecretsRole' }}, recursive=true) }}"
-#   when: oem_db_name is defined
-
 - name: Add User {{ db_username }} To Secret Dictionary
   set_fact:
     secret_password_dict: "{{ secret_password_dict |  combine({ 'account': { 'users': [{db_username: new_password | default(None) }] }}, recursive=true) }}"
 
 - name: Update {{ db_username }} Password In Secrets
-  import_role:
+  include_role:
     name: secretsmanager-passwords
   vars:
     secretsmanager_passwords: "{{ secret_password_dict }}"
