--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -3,6 +3,8 @@ run-name: "Oracle: ${{ github.event.inputs.TargetEnvironment }}-restore-points"
 on:
   workflow_dispatch:
     inputs:
+      # Note that we use, for example, "dev" here instead of "delius-core-dev"
+      # since we need to include both Delius & MIS environments in the same rollback.
       TargetEnvironment:
         description: "Target environment"
         required: true
@@ -66,6 +68,7 @@ on:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "main"
+
 env:
   ansible_config: operations/playbooks/ansible.cfg
   command: ansible-playbook operations/playbooks/oracle_restore_points/playbook.yml
@@ -186,6 +189,8 @@ jobs:
             playbooks/block_sessions
             playbooks/oracle_password_rotation
             playbooks/oracle_audit_replication_management
+            playbooks/oracle_backup
+            playbooks/oracle_ha
             playbooks/ansible.cfg
             common/*
           path: operations
@@ -239,6 +244,7 @@ jobs:
           ln -s $PWD/operations/playbooks/oracle_audit_replication_management/oracle_audit_replication_management $PWD/roles/ansible/roles/oracle_audit_replication_management
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_restore_points/roles
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
+          ln -s $PWD/operations/playbooks/oracle_ha/build-ha $PWD/roles/ansible/roles/build-ha
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_dbs=${{ steps.definetargets.outputs.delius_target }} \
           -e "required_action='${{ github.event.inputs.RequiredAction }}'" \
@@ -276,6 +282,8 @@ jobs:
             playbooks/oracle_restore_points
             playbooks/block_sessions
             playbooks/oracle_password_rotation
+            playbooks/oracle_audit_replication_management
+            playbooks/oracle_backup
             playbooks/ansible.cfg
             common/*
           path: operations
@@ -308,8 +316,10 @@ jobs:
         shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/operations/playbooks/oracle_audit_replication_management/oracle_audit_replication_management $PWD/roles/ansible/roles/oracle_audit_replication_management
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_restore_points/roles
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
+          ln -s $PWD/operations/playbooks/oracle_ha/build-ha $PWD/roles/ansible/roles/build-ha
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e target_dbs=${{ needs.validate-parameters.outputs.MisTargets  }} \
           -e "required_action='${{ github.event.inputs.RequiredAction }}'" \
