--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -385,19 +385,14 @@
               debug:
                 msg: "Restarting Audit Replication from SCN {{ get_db_startup_scn.stdout | trim }}"
 
-            # Include role inside a block so that it may be delegated
-            - name: Restart Audited Interaction Replication
-              when:
-                - target_dbs | regex_search('delius_dbs')
-                - database_primary_sid is defined
-              delegate_to: localhost
-              become: no
-              block:
-                - include_role:
-                    name: oracle_audit_replication_management
-                  vars:
-                    replication_action: restart
-                    audit_cdc_scn: "{{ get_db_startup_scn.stdout | trim }}"
+- name: Restart Audit Replication in Delius After Flashback
+  import_playbook: ../oracle_audit_replication_management/playbook.yml
+  vars:
+    target_hosts: "{{ target_dbs | replace('dbs','primarydb') }}"
+    replication_action: restart
+  when:
+    - required_action == "Flashback to Restore Point"
+    - target_dbs | regex_search('delius_dbs')
 
 # If this an AWS Environment then we will run password rotation - check if this is the case
 - name: Set Inside AWS for Password Rotation
@@ -428,6 +423,7 @@
     rotate_groups: "{{ target_dbs }}"
     rotate_passwords_not_from_oem: true
     oem_blackout_required: false
+    target_environment_name: "{{ environment_name }}"
   when:
     - required_action == "Flashback to Restore Point"
     - is_aws_environment | default(false)
@@ -454,17 +450,15 @@
           debug:
             msg: "database_type: {{ database_type }}    database: {{ database }}      fsfo_mode: {{ hostvars[groups[database_type + '_primarydb'][0]]['fsfo_mode'] | default('disabled') }}       group_names: {{ group_names }}"
 
-        # Re-Enable FSFO from Associated Primary
-        # (Only run from First Standby for each Database Type to avoid competing startups)
-        - name: Re-enable FSFO
+        - name: Re-enable FSFO from Primary
           include_role:
-            name: hmpps-delius-oracledb-ha
-            tasks_from: enable-fsfo.yml
+            name: build-ha
           vars:
-            delegation_host: "{{ hostvars[groups[database_type + '_primarydb'][0]]['inventory_hostname'] }}"
-            primary_hostname: "{{ hostvars[groups[database_type + '_primarydb'][0]]['inventory_hostname'] }}"
-            fsfo_mode: "{{ hostvars[groups[database_type + '_primarydb'][0]]['fsfo_mode'] | default('disabled') }}"
-            high_availability_count: "{{ database[database_type]['high_availability_count'] }}"
+            force_restore: true
+            password_rotation: false
+            method: "fsfo setup"
+            primary: "{{ ( (group_names | select('match','.*_standbydb\\d+')) if (database_standby_sid is defined) else (group_names | select('match','.*_primarydb')) ) | list | first | regex_replace('^(.*)_standbydb\\d+', '\\1_primarydb') }}"
+            standby_number: 0
           when:
             - database[database_type]['high_availability_count'] | int > 0
             - hostvars[groups[database_type + '_primarydb'][0]]['fsfo_mode'] | default('disabled') | lower in ['enabled','observe','observer']
