--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/modify_metric_thresholds.yml
@@ -36,6 +36,8 @@
         {{ item.1.input_file }}
         EOINPUT
         echo "Setting thresholds for {{ item.1.target_type }} {{ item.0.target_name }}"
+        . ~/.bash_profile
+        export JAVA_HOME=$ORACLE_HOME/jdk/jre
         {{ emcli }} modify_threshold -target_name={{ item.0.target_name }} -target_type={{ item.1.target_type }} \
               -input_file="FILE:{{ stage }}/oem_threshold.txt"
         # There appears to be an undocumented bug unsetting thresholds using EMCLI input files.
